--- a/frontend/myApp/my-app/src/components/Home.css
+++ b/frontend/myApp/my-app/src/components/Home.css
@@ -52,3 +52,13 @@
     font-size: 1.2rem;
     margin-bottom: 30px;
 }
+
+/* Ensuring all images have the same size */
+.card-img-top {
+    width: 100%;
+    height: 200px; /* Adjust this height as needed */
+    object-fit: cover;
+}
+.card-body .btn-secondary {
+    margin-left: 10px;
+}
